[package]
name = "hookee"
description = "Lightweight utility for Git hooks 👻"
authors = ["Ivanbyone <ivanbyone@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
rust-version = "1.87.0"
keywords = [ "git-hooks", "git", "hooks", "utility", "pre-commit" ]
categories = [ "development-tools" ]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0"
